--- a/index.html
+++ b/index.html
@@ -1,47 +1,27 @@
 <!doctype html>
 <html>
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
     <link href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
-    <title>5-days forecast</title>
-    <!-- Include the AngularJS library -->
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+    <script src="js/vendor/angular.min.js"></script>
   </head>
-  <body ng-app="ForecastApp">
-
-    <div class="main" ng-controller="MainController">
+  <body ng-app="OutboxApp">
+    <div class="header">
       <div class="container">
-        <div class="row">
-          <div class="col-sm-5 col-sm-offset-7">
-            <h1>{{ fiveDay.city_name }}</h1>
-            <h2>5-day forecast</h2>
-            <div class="forecast" ng-repeat="day in fiveDay.days">
-              <div class="day row">
+        <img src="img/logo.svg" width="140" height="150">
+      </div>
+    </div>
 
-                <!-- datetime -->
-                <div class="weekday col-xs-4">
-                 <p> {{day.datetime | date}}</p>
-                </div>
+    <div class="main" ng-controller="HomeController">
+      <div class="container">
 
-                <!-- icon -->
-                <div class="weather col-xs-3">
-                  <img ng-src="{{day.icon}}">
-                </div>
-                <div class="col-xs-1"></div>
-                <!-- high -->
-                <div class="high col-xs-2">
-                <p>{{day.high}}&deg</p>
-
-                </div>
-                <!-- low -->
-                <div class="low col-xs-2">
-                <p> {{day.low}}&deg</p>
-                </div>
-              </div>
-            </div>
-          </div>
+        <div class="email" ng-repeat="email in emails">
+          <span class="from"> {{email.from}}</span> 
+          <span class="subject"> {{email.subject}}</span>
+          <span class="date">{{email.datetime | date}} </span>
         </div>
+
       </div>
     </div>
 
@@ -49,13 +29,10 @@
     <script src="js/app.js"></script>
 
     <!-- Controllers -->
-    <script src="js/controllers/MainController.js"></script>
+    <script src="js/controllers/HomeController.js"></script>
 
     <!-- Services -->
-    <script src="js/services/forecast.js"></script>
-
-    <!-- Directives -->
-
+        <script src="js/services/emails.js"></script>
 
   </body>
 </html>
