--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
     <script src="js/vendor/angular.min.js"></script>
+    <title>OutboxApp</title>
   </head>
   <body ng-app="OutboxApp">
     <div class="header">
