--- a/index.html
+++ b/index.html
@@ -1,28 +1,29 @@
 <!doctype html>
 <html>
   <head>
-      <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css'>
+      <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css" rel="stylesheet" />
     <link href="css/main.css" rel="stylesheet" />
     <script src="js/vendor/angular.min.js"></script>
-    <title>OutboxApp</title>
+    <title>Top10 TV shows</title>
   </head>
-  <body ng-app="OutboxApp">
+  <body ng-app="Top10App">
     <div class="header">
       <div class="container">
-        <img src="img/logo.svg" width="140" height="150">
+        10
       </div>
     </div>
 
-    <div class="main" ng-controller="HomeController">
+    <div class="main" ng-controller="MainController">
       <div class="container">
+        <div class="content">
+          <div>
+            <div class="rank">{{$index + 1}}</div>
+            <tv-show ng-repeat="show in shows" info="show"></tv-show>
+          </div>
+         
 
-        <div class="email" ng-repeat="email in emails">
-          <span class="from"> {{email.from}}</span> 
-          <span class="subject"> {{email.subject}}</span>
-          <span class="date">{{email.datetime | date}} </span>
         </div>
-
       </div>
     </div>
 
@@ -30,10 +31,14 @@
     <script src="js/app.js"></script>
 
     <!-- Controllers -->
-    <script src="js/controllers/HomeController.js"></script>
+    <script src="js/controllers/MainController.js"></script>
+
+    <!-- Directives -->
+        <script src="js/directives/tvShow.js"></script>
+
 
     <!-- Services -->
-        <script src="js/services/emails.js"></script>
+    <script src="js/services/shows.js"></script>
 
   </body>
 </html>
