--- a/index.html
+++ b/index.html
@@ -1,44 +1,39 @@
 <!doctype html>
 <html>
   <head>
-      <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href="https://s3.amazonaws.com/codecademy-content/projects/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,300" rel="stylesheet" type="text/css">
     <link href="css/main.css" rel="stylesheet" />
-    <script src="js/vendor/angular.min.js"></script>
-    <title>Top10 TV shows</title>
+
+    <!-- Include the core AngularJS library -->
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.min.js"></script>
+
+    <!-- Include the AngularJS routing library -->
+    <script src="https://code.angularjs.org/1.2.28/angular-route.min.js"></script>
+    <title>Photos-Routing</title>
   </head>
-  <body ng-app="Top10App">
+  <body ng-app="GalleryApp">
+
     <div class="header">
+      <div ng-view></div>
       <div class="container">
-        10
+        <a href="/#/">
+          <img src="img/logo.svg" width="80" height="80"> &#12501; &#65387; &#12488; &#12501; &#65387; &#12488;
+        </a>
       </div>
     </div>
 
-    <div class="main" ng-controller="MainController">
-      <div class="container">
-        <div class="content">
-          <div>
-            <div class="rank">{{$index + 1}}</div>
-            <tv-show ng-repeat="show in shows" info="show"></tv-show>
-          </div>
-         
 
-        </div>
-      </div>
-    </div>
 
     <!-- Modules -->
     <script src="js/app.js"></script>
 
     <!-- Controllers -->
-    <script src="js/controllers/MainController.js"></script>
-
-    <!-- Directives -->
-        <script src="js/directives/tvShow.js"></script>
-
+    <script src="js/controllers/HomeController.js"></script>
+    <script src="js/controllers/PhotoController.js"></script>
 
     <!-- Services -->
-    <script src="js/services/shows.js"></script>
+    <script src="js/services/photos.js"></script>
 
   </body>
 </html>
